@startuml

title __LANGUAGE's Class Diagram__\n

  namespace language {
    class language.C {
        + create()
        + createParser()
        + toString()
        ~ C()
    }
  }
  

  namespace language {
    class language.CPP {
        + create()
        + createParser()
        + toString()
        ~ CPP()
    }
  }
  

  namespace language {
    interface language.Language {
        {abstract} + create()
        {abstract} + createParser()
        {abstract} + toString()
    }
  }
  

  namespace language {
    class language.LanguageStaticFactory {
        {static} + getLanguage()
    }
  }
  

  namespace language {
    class language.Python {
        + create()
        + createParser()
        + toString()
        ~ Python()
    }
  }
  

  language.C .up.|> language.Language
  language.C o-- language.parser.Parser : parser
  language.CPP .up.|> language.Language
  language.CPP o-- language.parser.Parser : parser
  language.Python .up.|> language.Language
  language.Python o-- language.parser.Parser : parser


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
